# reserveFDF

./: CMakeLists.txt  README.md  fdf.h  ft_atoi_base.c  ft_brazenhaim.c  ft_color.c  ft_del_mlx.c  ft_draw.c  ft_event.c  ft_foo.c  ft_list_foo.c  ft_make_mlx.c  ft_matrix_transform.c  ft_point.c  ft_read_file.c  main.c
gnl/: get_next_line.h
